--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,10 @@ spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_us
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web.reactive.function.client=TRACE
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+management.endpoints.web.exposure.include=health,metrics,info,conditions,beans
+spring.config.import=optional:configserver:
+#The below properties are specific to Apple M1 chip
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
